--- a/GOAL Release 2.0.0/Base.lproj/Main.storyboard
+++ b/GOAL Release 2.0.0/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -31,20 +32,6 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="JZW-Og-LrR"/>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ci8-Rb-SWs">
-                                <rect key="frame" x="476" y="65" width="90" height="30"/>
-                                <color key="backgroundColor" red="0.98823529409999999" green="0.30196078430000001" blue="0.26274509800000001" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="K9v-Ds-bha"/>
-                                    <constraint firstAttribute="width" constant="90" id="pzc-l7-h2M"/>
-                                </constraints>
-                                <state key="normal" title="get points! ">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="28n-Mq-0q9" kind="show" id="Ua2-Hm-PZx"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="  Upcoming Events" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="43" translatesAutoresizingMaskIntoConstraints="NO" id="NVS-41-ZHc">
                                 <rect key="frame" x="0.0" y="139" width="600" height="36"/>
                                 <color key="backgroundColor" red="1" green="0.39458076149999999" blue="0.32654243500000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -59,19 +46,93 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="highlightedColor" red="1" green="0.39629123119999998" blue="0.2364814496" alpha="1" colorSpace="calibratedRGB"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ci8-Rb-SWs">
+                                <rect key="frame" x="476" y="65" width="90" height="30"/>
+                                <color key="backgroundColor" red="0.98823529409999999" green="0.30196078430000001" blue="0.26274509800000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="K9v-Ds-bha"/>
+                                    <constraint firstAttribute="width" constant="90" id="pzc-l7-h2M"/>
+                                </constraints>
+                                <state key="normal" title="get points! ">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="28n-Mq-0q9" kind="show" id="Ua2-Hm-PZx"/>
+                                </connections>
+                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="75" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="uTx-At-llX">
+                                <rect key="frame" x="6" y="183" width="589" height="409"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="589" id="3iA-cb-eti"/>
+                                    <constraint firstAttribute="height" constant="409" id="Jhd-7a-nMU"/>
+                                    <constraint firstAttribute="width" secondItem="uTx-At-llX" secondAttribute="height" multiplier="589:409" id="OV8-ir-Gdz"/>
+                                    <constraint firstAttribute="width" secondItem="uTx-At-llX" secondAttribute="height" multiplier="589:409" id="Qe1-Fr-7fA"/>
+                                </constraints>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="gray" indentationWidth="10" reuseIdentifier="KCEventTableViewCell" rowHeight="75" id="r4C-2W-avf" customClass="KCEventTableViewCell" customModule="GOAL_Release_2_0_0" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="589" height="75"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="r4C-2W-avf" id="86k-bP-5ut">
+                                            <rect key="frame" x="0.0" y="0.0" width="589" height="74"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Event Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lEg-Ur-zIK">
+                                                    <rect key="frame" x="16" y="8" width="565" height="34"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="34" id="CBG-di-IfT"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Event Location and Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hc2-a5-sg4">
+                                                    <rect key="frame" x="16" y="45" width="188" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="topMargin" secondItem="lEg-Ur-zIK" secondAttribute="top" id="63y-Tz-UDv"/>
+                                                <constraint firstAttribute="topMargin" secondItem="lEg-Ur-zIK" secondAttribute="top" id="hhg-3U-GEI"/>
+                                                <constraint firstItem="lEg-Ur-zIK" firstAttribute="centerX" secondItem="86k-bP-5ut" secondAttribute="centerX" constant="4" id="w8e-PZ-dVn"/>
+                                                <constraint firstItem="lEg-Ur-zIK" firstAttribute="leading" secondItem="86k-bP-5ut" secondAttribute="leadingMargin" constant="8" id="yiX-L9-lgx"/>
+                                                <constraint firstAttribute="topMargin" secondItem="lEg-Ur-zIK" secondAttribute="top" id="yt1-q1-VdV"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="lEg-Ur-zIK" secondAttribute="bottom" constant="33" id="AD2-fg-Dyn"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="accessoryView" destination="uTx-At-llX" id="C3V-dL-bHP"/>
+                                            <outlet property="eventDetailLabel" destination="hc2-a5-sg4" id="h7q-zq-Qhx"/>
+                                            <outlet property="eventNameLabel" destination="lEg-Ur-zIK" id="hVr-h6-NLw"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="cMb-vH-TZf" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" constant="27" id="3Rs-bb-prp"/>
+                            <constraint firstItem="uTx-At-llX" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" constant="-14" id="4tb-sn-kLC"/>
                             <constraint firstItem="JZW-Og-LrR" firstAttribute="top" secondItem="tsR-hK-woN" secondAttribute="top" id="58R-9o-TK2"/>
+                            <constraint firstItem="uTx-At-llX" firstAttribute="centerX" secondItem="tsR-hK-woN" secondAttribute="centerX" id="CX1-Xl-pRs"/>
+                            <constraint firstItem="uTx-At-llX" firstAttribute="top" secondItem="NVS-41-ZHc" secondAttribute="bottom" constant="8" id="GIA-fj-f9v"/>
                             <constraint firstAttribute="bottom" secondItem="JZW-Og-LrR" secondAttribute="bottom" constant="600" id="KXJ-pl-axI"/>
                             <constraint firstItem="NVS-41-ZHc" firstAttribute="top" secondItem="cMb-vH-TZf" secondAttribute="bottom" constant="44" id="Rc2-Wo-opw"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="uTx-At-llX" secondAttribute="trailing" constant="-15" id="Vgr-IG-zkY"/>
                             <constraint firstItem="NVS-41-ZHc" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" constant="-20" id="XSA-wB-RiH"/>
                             <constraint firstAttribute="trailingMargin" secondItem="ci8-Rb-SWs" secondAttribute="trailing" constant="14" id="Xvd-o0-cVQ"/>
                             <constraint firstItem="cMb-vH-TZf" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" constant="54" id="Ynb-VY-7Dp"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="uTx-At-llX" secondAttribute="trailing" constant="-15" id="cHs-cY-kiM"/>
                             <constraint firstItem="ci8-Rb-SWs" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" constant="45" id="dui-c5-mVg"/>
+                            <constraint firstItem="uTx-At-llX" firstAttribute="centerX" secondItem="tsR-hK-woN" secondAttribute="centerX" id="hu0-uC-riH"/>
                             <constraint firstItem="cMb-vH-TZf" firstAttribute="bottom" secondItem="ci8-Rb-SWs" secondAttribute="bottom" id="oKz-3X-tCJ"/>
                             <constraint firstAttribute="trailing" secondItem="JZW-Og-LrR" secondAttribute="trailing" constant="600" id="sX7-84-izx"/>
+                            <constraint firstItem="uTx-At-llX" firstAttribute="centerX" secondItem="tsR-hK-woN" secondAttribute="centerX" id="t4k-xv-8aK"/>
+                            <constraint firstItem="uTx-At-llX" firstAttribute="centerX" secondItem="tsR-hK-woN" secondAttribute="centerX" id="v9i-4L-tKX"/>
                             <constraint firstItem="JZW-Og-LrR" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leading" id="xcE-Ox-Pj4"/>
                         </constraints>
                     </view>
